--- a/Ejercicios/E7_MontaniaRusa/index.html
+++ b/Ejercicios/E7_MontaniaRusa/index.html
@@ -16,7 +16,7 @@
 
 			#container3D {
 				width: 100%;
-				height: 60%;
+				height: 100%;
 			}
 			#cameras {
 				width: 100%;
@@ -39,10 +39,10 @@
 	</head>
 	<body>
 		<div id="container3D"></div>
-		<div id="cameras">
+<!--		<div id="cameras">
 			<div id="container3DC1"></div>
 			<div id="container3DC2"></div>
-		</div>
+		</div>-->
 		<script type="module" src="/src/main.js"></script>
 	</body>
 </html>
