--- a/Ejercicios/E7_MontaniaRusa/index.html
+++ b/Ejercicios/E7_MontaniaRusa/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>Template 3</title>
+		<title>TP Final Sistemas Graficos</title>
 		<style>
 			html,
 			body {
